--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -37,6 +37,29 @@
     @apply text-base text-zinc-500 leading-normal tracking-tight
   }
 
+  .text-body-tag {
+    @apply text-sm text-black font-medium leading-normal tracking-tight
+  }
+
+  .rainbow-gradient {
+    @apply bg-gradient-to-r from-[#C3EFFF] via-[#FECAFF] via-[#FEB5FF] via-[#FFDBE7] via-[#FFF4D6] via-[#F3FCD7] via-[#D2F5EE] via-[#C3EFFF] to-[#FBEFFF]
+  }
+
+  .container {
+    @apply mx-auto p-4 sm:p-6 lg:p-8
+  }
+
+  .flex-center {
+    @apply flex items-center justify-center
+  }
+
+  .flex-center-col {
+    @apply flex flex-col items-center justify-center
+  }
+  .flex-between {
+    @apply flex items-center justify-between
+  }
+
   .fade-in {
     animation: fade-in 3s ease-in-out;
   }
