--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -95,6 +95,10 @@
     @apply py-3 px-5 dark:bg-white bg-black font-semibold dark:text-black text-white inline-flex whitespace-nowrap rounded-lg w-fit text-sm;
   }
 
+    .btn-purple {
+    @apply bg-violet-700 text-white;
+  }
+
   .tag {
     @apply py-2 px-4 border border-white/40 dark:border-white/20  text-black dark:text-white/50 rounded-xl w-fit text-sm inline-flex ;
   }
